--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
         <div class="footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" class="logo logo_place_footer"
                alt="Не удалось загрузить изображение">
-          <p class="footer__author">&copy; 2019. Виталий Лапиков</p>
+          <p class="footer__author">&copy; 2020. Виталий Лапиков</p>
         </div>
 
         <div class="footer__column_content_info">
-          <h4 class="footer__column-heading">О практикуме</h4>
+          <h4 class="footer__column-heading">О Практикуме</h4>
           <ul class="footer__list">
             <li><a class="footer__column-links" href="#">Главная</a></li>
             <li><a class="footer__column-links" href="#">Концепция</a></li>
