Исправлены отступы, браузерные стили, приведено в порядок именование именование, убраны ненужные параметры элементов в CSS

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         вы можете использовать в своей жизни? <a class="link" href="#">Узнать →</a></p>
       <div class="header__main-illustration"></div>
       <div class="header__square-pic"></div>
-
     </header>
 
     <main class="content">
@@ -43,105 +42,107 @@
       </section>
 
       <section class="digits">
-        <h2 class="section-title digits__section-title">Цифры и факты</h2>
-        <h4 class="section-subtitle digits__section-subtitle">Про учебу и мозг</h4>
+        <h2 class="section-title section-title_place_digits">Цифры и факты</h2>
+        <h4 class="section-subtitle section-subtitle_place_digits">Про учебу и мозг</h4>
         <table>
-          <tr class="table digits__table">
-            <td class="cell digits__cell">
-              <h3 class="cell__heading">86 миллиардов</h3>
-              <p class="cell_text">Число нейронов в мозге человека</p>
+          <tr class="table table_place_digits">
+            <td class="table__cell cell_place_digits">
+              <h3 class="table__heading table__heading_place_digits">86 миллиардов</h3>
+              <p class="table__text table__text_place_digits">Число нейронов в мозге человека</p>
             </td>
-            <td class="cell digits__cell">
-              <h3 class="cell__heading">2,1 миллиарда</h3>
-              <p class="cell_text">Число нуждающихся в повышении квалификации</p>
-              <p class="cell_text">Всемирный банк, 2017</p>
+            <td class="table__cell cell_place_digits">
+              <h3 class="table__heading table__heading_place_digits">2,1 миллиарда</h3>
+              <p class="table__text table__text_place_digits">Число нуждающихся в повышении квалификации</p>
+              <p class="table__text table__text_place_digits">Всемирный банк, 2017</p>
             </td>
-            <td class="cell digits__cell">
-              <h3 class="cell__heading">1000 терабайт</h3>
-              <p class="cell_text">Объем памяти человека</p>
+            <td class="table__cell cell_place_digits">
+              <h3 class="table__heading table__heading_place_digits">1000 терабайт</h3>
+              <p class="table__text table__text_place_digits">Объем памяти человека</p>
             </td>
-            <td class="cell digits__cell">
-              <h3 class="cell__heading">500 триллионов</h3>
-              <p class="cell_text">Число отвественных за обучение нервных
+            <td class="table__cell cell_place_digits">
+              <h3 class="table__heading table__heading_place_digits">500 триллионов</h3>
+              <p class="table__text table__text_place_digits">Число отвественных за обучение нервных
               синапсов у взрослого человека</p>
             </td>
-            <td class="cell digits__cell">
-              <h3 class="cell__heading">420 миллионов</h3>
-              <p class="cell_text">Число взрослых людей моложе 25 лет,
+            <td class="table__cell cell_place_digits">
+              <h3 class="table__heading table__heading_place_digits">420 миллионов</h3>
+              <p class="table__text table__text_place_digits">Число взрослых людей моложе 25 лет,
               не имеющих образования для трудоустйсва</p>
-              <p class="cell_text">Всемирный банк, 2017</p>
+              <p class="table__text table__text_place_digits">Всемирный банк, 2017</p>
             </td>
-            <td class="cell digits__cell">
-              <h3 class="cell__heading">17—20 лет</h3>
-              <p class="cell_text">Пик обучаемости</p>
+            <td class="table__cell cell_place_digits">
+              <h3 class="table__heading table__heading_place_digits">17—20 лет</h3>
+              <p class="table__text table__text_place_digits">Пик обучаемости</p>
             </td>
-            <td class="cell digits__cell">
-              <h3 class="cell__heading">1885 год</h3>
-              <p class="cell_text">Открытие кривой забывания</p>
+            <td class="table__cell cell_place_digits">
+              <h3 class="table__heading table__heading_place_digits">1885 год</h3>
+              <p class="table__text table__text_place_digits">Открытие кривой забывания</p>
             </td>
-            <td class="cell digits__cell">
-              <h3 class="cell__heading">1889 год</h3>
-              <p class="cell_text">Открытие условного рефлекса</p>
+            <td class="table__cell cell_place_digits">
+              <h3 class="table__heading table__heading_place_digits">1889 год</h3>
+              <p class="table__text table__text_place_digits">Открытие условного рефлекса</p>
             </td>
           </tr>
         </table>
       </section>
 
       <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <a class="feynman__link" href="#">Подробнее →</a>
+        <h2 class="section-title section-title_place_feynman">Метод Фейнмана</h2>
+        <h3 class="section-subtitle section-subtitle_place_feynman">Выучить и не забыть.</h3>
+        <a class="link link_place_feynman" href="#">Подробнее →</a>
       </section>
 
       <section class="kaufman">
-        <h2 class="kaufman__section-title">Приницпы обучения</h2>
-        <h3 class="kaufman__section-subtitle">от Джоша Кауфмана</h3>
+        <h2 class="section-title section-title_theme_dark">Приницпы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
         <table>
-          <tr class="table kaufman__table">
-            <td class="table__cell_theme_dark">
-              <h3 class="cell__heading">1</h3>
-              <p class="cell_text">Выберите привлекательный проект.</p>
+          <tr class="table table_theme_dark">
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
+              <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
             </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="cell__heading">2</h3>
-              <p class="cell_text">Сосредоточьтесь на каком-то одном навыке.</p>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
+              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="cell__heading">3</h3>
-              <p class="cell_text">Определите целевой уровень мастерства.</p>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
+              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
             </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="cell__heading">4</h3>
-              <p class="cell_text">Разбейте навык на элементы.</p>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
+              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
             </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="cell__heading">5</h3>
-              <p class="cell_text">Приготовьте все необходимо для занятий.</p>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
+              <p class="table__text table__text_theme_dark">Приготовьте все необходимо для занятий.</p>
             </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="cell__heading">6</h3>
-              <p class="cell_text">Устраните препятствие для занятий.</p>
+          </tr>
+          <tr class="table table_theme_dark">
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
+              <p class="table__text table__text_theme_dark">Устраните препятствие для занятий.</p>
             </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="cell__heading">7</h3>
-              <p class="cell_text">Выделите специальное время для занятий.</p>
+            <td class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
+              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
             </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="cell__heading">8</h3>
-              <p class="cell_text">Создайте быстрее петли обратной связи.</p>
+            <td class="table_cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
+              <p class="table__text table__text_theme_dark">Создайте быстрее петли обратной связи.</p>
             </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="cell__heading">9</h3>
-              <p class="cell_text">Занимайтесь по расписанию,
+            <td class="table_cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
+              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию,
                 короткими интенсивными интервалами.</p>
             </td>
-            <td class="table__cell_theme_dark">
-              <h3 class="cell__heading">10</h3>
-              <p class="cell_text">Уделяйте внимание количеству и скорости.</p>
+            <td class="table_cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
+              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </td>
           </tr>
         </table>
-        <img src="./images/kaufman-triangle.svg" alt="Не удалось загрузить изображение" class="triangle">
+        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle" alt="Не удалось загрузить изображение">
       </section>
     </main>
 
