Поправлен CSS для элементов вблоках header и kaufman

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header class="header">
       <img class="logo logo_place_header" src="./images/logo_place_header.svg"
-           alt="Не удалось загрузить изображение">
+           alt="Логотип Яндекс.Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению
         вы можете использовать в своей жизни? <a class="link" href="#">Узнать →</a></p>
@@ -25,20 +25,20 @@
 
     <main class="content">
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
             Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи,
             чтобы лучше сдать тест, но часто в итоге это не дает нам реальноного знания.
               Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph"><span class="two-columns_span-accent">Вывод: </span>учиться тоже нужно уметь,
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь,
             но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
             сделают его эффективным и захватывающим. Эти же техники применяются на примере
             обучения в Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="digits">
@@ -142,7 +142,7 @@
             </td>
           </tr>
         </table>
-        <img src="./images/kaufman-triangle.svg" class="kaufman__triangle" alt="Не удалось загрузить изображение">
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
 
@@ -150,20 +150,20 @@
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" class="logo logo_place_footer"
-               alt="Не удалось загрузить изображение">
+               alt="Логотип Яндекс.Практикум">
           <p class="footer__author">&copy; 2020. Виталий Лапиков</p>
         </div>
 
-        <div class="footer__column_content_info">
+        <nav class="footer__column footer__column_content_info">
           <h4 class="footer__column-heading">О Практикуме</h4>
           <ul class="footer__list">
             <li><a class="footer__column-links" href="#">Главная</a></li>
             <li><a class="footer__column-links" href="#">Концепция</a></li>
             <li><a class="footer__column-links" href="#">Наставники</a></li>
           </ul>
-        </div>
+        </nav>
 
-        <div class="footer__column_content_social">
+        <nav class="footer__column footer__column_content_social">
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__list">
             <li><a class="footer__column-links" href="#">
@@ -176,7 +176,7 @@
               <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="">Instagram</a>
             </li>
           </ul>
-        </div>
+        </nav>
       </div>
     </footer>
 
