--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
            alt="Логотип Яндекс.Практикум">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению
-        вы можете использовать в своей жизни? <a class="link" href="#">Узнать →</a></p>
-      <div class="header__main-illustration"></div>
+        вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать →</a></p>
+      <!--<div class="header__main-illustration"></div>--!>
+      <img class="header__main-illustration" src="./images/header-image.png" alt="Главное изображение">
       <div class="header__square-pic"></div>
     </header>
 
@@ -42,113 +43,113 @@
       </section>
 
       <section class="digits">
-        <h2 class="section-title section-title_place_digits">Цифры и факты</h2>
-        <h4 class="section-subtitle section-subtitle_place_digits">Про учебу и мозг</h4>
-        <table>
-          <tr class="table table_place_digits">
-            <td class="table__cell cell_place_digits">
-              <h3 class="table__heading table__heading_place_digits">86 миллиардов</h3>
-              <p class="table__text table__text_place_digits">Число нейронов в мозге человека</p>
-            </td>
-            <td class="table__cell cell_place_digits">
-              <h3 class="table__heading table__heading_place_digits">2,1 миллиарда</h3>
-              <p class="table__text table__text_place_digits">Число нуждающихся в повышении квалификации</p>
-              <p class="table__text table__text_place_digits">Всемирный банк, 2017</p>
-            </td>
-            <td class="table__cell cell_place_digits">
-              <h3 class="table__heading table__heading_place_digits">1000 терабайт</h3>
-              <p class="table__text table__text_place_digits">Объем памяти человека</p>
-            </td>
-            <td class="table__cell cell_place_digits">
-              <h3 class="table__heading table__heading_place_digits">500 триллионов</h3>
-              <p class="table__text table__text_place_digits">Число отвественных за обучение нервных
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учебу и мозг</p>
+        <div>
+          <div class="table">
+            <div class="table__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">2,1 миллиарда</h3>
+              <p class="table__text">Число нуждающихся в повышении квалификации</p>
+              <p class="table__text">Всемирный банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объем памяти человека</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__text">Число отвественных за обучение нервных
               синапсов у взрослого человека</p>
-            </td>
-            <td class="table__cell cell_place_digits">
-              <h3 class="table__heading table__heading_place_digits">420 миллионов</h3>
-              <p class="table__text table__text_place_digits">Число взрослых людей моложе 25 лет,
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__text">Число взрослых людей моложе 25 лет,
               не имеющих образования для трудоустйсва</p>
-              <p class="table__text table__text_place_digits">Всемирный банк, 2017</p>
-            </td>
-            <td class="table__cell cell_place_digits">
-              <h3 class="table__heading table__heading_place_digits">17—20 лет</h3>
-              <p class="table__text table__text_place_digits">Пик обучаемости</p>
-            </td>
-            <td class="table__cell cell_place_digits">
-              <h3 class="table__heading table__heading_place_digits">1885 год</h3>
-              <p class="table__text table__text_place_digits">Открытие кривой забывания</p>
-            </td>
-            <td class="table__cell cell_place_digits">
-              <h3 class="table__heading table__heading_place_digits">1889 год</h3>
-              <p class="table__text table__text_place_digits">Открытие условного рефлекса</p>
-            </td>
-          </tr>
-        </table>
+              <p class="table__text">Всемирный банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">17—20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="feynman">
-        <h2 class="section-title section-title_place_feynman">Метод Фейнмана</h2>
-        <h3 class="section-subtitle section-subtitle_place_feynman">Выучить и не забыть.</h3>
-        <a class="link link_place_feynman" href="#">Подробнее →</a>
+        <h2 class="section-title feynman__section-title">Метод Фейнмана</h2>
+        <p class="section-subtitle feynman__section-subtitle">Выучить и не забыть.</p>
+        <a class="link feynman__link" href="#">Подробнее →</a>
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Приницпы обучения</h2>
         <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-        <table>
-          <tr class="table table_theme_dark">
-            <td class="table__cell table__cell_theme_dark">
+        <div>
+          <div class="table table_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
+            </div>
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">2</h3>
               <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
+            </div>
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">3</h3>
               <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
+            </div>
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">4</h3>
               <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
+            </div>
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">Приготовьте все необходимо для занятий.</p>
-            </td>
-          </tr>
-          <tr class="table table_theme_dark">
-            <td class="table__cell table__cell_theme_dark">
+            </div>
+          </div>
+          <div class="table table_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">6</h3>
               <p class="table__text table__text_theme_dark">Устраните препятствие для занятий.</p>
-            </td>
-            <td class="table__cell table__cell_theme_dark">
+            </div>
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">7</h3>
               <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
-            </td>
-            <td class="table_cell table__cell_theme_dark">
+            </div>
+            <div class="table_cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">8</h3>
               <p class="table__text table__text_theme_dark">Создайте быстрее петли обратной связи.</p>
-            </td>
-            <td class="table_cell table__cell_theme_dark">
+            </div>
+            <div class="table_cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">9</h3>
               <p class="table__text table__text_theme_dark">Занимайтесь по расписанию,
                 короткими интенсивными интервалами.</p>
-            </td>
-            <td class="table_cell table__cell_theme_dark">
+            </div>
+            <div class="table_cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">10</h3>
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
-            </td>
-          </tr>
-        </table>
+            </div>
+          </div>
+        </div>
         <div class="kaufman__triangle"></div>
       </section>
     </main>
 
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
+        <div class="footer__column footer__column_content_copyright">
           <img src="./images/logo_place_footer.svg" class="logo logo_place_footer"
                alt="Логотип Яндекс.Практикум">
           <p class="footer__author">&copy; 2020. Виталий Лапиков</p>
@@ -167,13 +168,13 @@
           <h4 class="footer__column-heading">Соцсети</h4>
           <ul class="footer__list">
             <li><a class="footer__column-links" href="#">
-              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="">Facebook</a>
+              <img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Логотип FB">Facebook</a>
             </li>
             <li><a class="footer__column-links" href="#">
-              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="">ВКонтакте</a>
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Логотип ВК">ВКонтакте</a>
             </li>
             <li><a class="footer__column-links" href="#">
-              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="">Instagram</a>
+              <img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Логотип Instagram">Instagram</a>
             </li>
           </ul>
         </nav>
