--- a/index.html
+++ b/index.html
@@ -44,58 +44,55 @@
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учебу и мозг</p>
-        <div>
-          <div class="table">
-            <div class="table__cell">
-              <h3 class="table__heading">86 миллиардов</h3>
-              <p class="table__text">Число нейронов в мозге человека</p>
-            </div>
-            <div class="table__cell">
-              <h3 class="table__heading">2,1 миллиарда</h3>
-              <p class="table__text">Число нуждающихся в повышении квалификации</p>
-              <p class="table__text">Всемирный банк, 2017</p>
-            </div>
-            <div class="table__cell">
-              <h3 class="table__heading">1000 терабайт</h3>
-              <p class="table__text">Объем памяти человека</p>
-            </div>
-            <div class="table__cell">
-              <h3 class="table__heading">500 триллионов</h3>
-              <p class="table__text">Число отвественных за обучение нервных
-              синапсов у взрослого человека</p>
-            </div>
-            <div class="table__cell">
-              <h3 class="table__heading">420 миллионов</h3>
-              <p class="table__text">Число взрослых людей моложе 25 лет,
-              не имеющих образования для трудоустйсва</p>
-              <p class="table__text">Всемирный банк, 2017</p>
-            </div>
-            <div class="table__cell">
-              <h3 class="table__heading">17—20 лет</h3>
-              <p class="table__text">Пик обучаемости</p>
-            </div>
-            <div class="table__cell">
-              <h3 class="table__heading">1885 год</h3>
-              <p class="table__text">Открытие кривой забывания</p>
-            </div>
-            <div class="table__cell">
-              <h3 class="table__heading">1889 год</h3>
-              <p class="table__text">Открытие условного рефлекса</p>
-            </div>
+        <div class="table">
+          <div class="table__cell">
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">2,1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объем памяти человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число отвественных за обучение нервных
+            синапсов у взрослого человека</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет,
+            не имеющих образования для трудоустйсва</p>
+            <p class="table__text">Всемирный банк, 2017</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">17—20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
+          </div>
+          <div class="table__cell">
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
 
       <section class="feynman">
-        <h2 class="section-title feynman__section-title">Метод Фейнмана</h2>
-        <p class="section-subtitle feynman__section-subtitle">Выучить и не забыть.</p>
-        <a class="link feynman__link" href="#">Подробнее →</a>
+        <h2 class="feynman__section-title">Метод Фейнмана</h2>
+        <p class="feynman__section-subtitle">Выучить и не забыть.</p>
+        <a class="feynman__link" href="#">Подробнее →</a>
       </section>
 
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Приницпы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-        <div>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
           <div class="table table_theme_dark">
             <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -141,7 +138,6 @@
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </div>
           </div>
-        </div>
         <div class="kaufman__triangle"></div>
       </section>
     </main>
