--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-
 <html lang="ru">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
 
@@ -39,6 +37,87 @@
             обучения в Практикуме.</p>
           </div>
         </article>
+      </section>
+
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+        <div class="cards">
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt>
+            <h3 class="cards__title">Два вида внимания</h3>
+            <p class="cards__description">Глубокие знания возникают,
+              если чередовать сфокусированное и рассеянное мышление.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt>
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">
+              Вспоминайте изученное — это позволит
+              соединить разрозненные порции памяти.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png" alt>
+            <h3 class="cards__title">Интерливинг</h3>
+            <p class="cards__description">
+              Изучайте несколько
+              навыков одновременно,
+              они обогащают друг друга.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt>
+            <h3 class="cards__title">Вопросы</h3>
+            <p class="cards__description">
+              Слушая преподавателя, придумывайте хороший вопрос,
+              который вас действительно волнует.
+            </p>
+          </div>
+          <div class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt>
+            <h3 class="cards__title">Иллюзия компетентности</h3>
+            <p class="cards__description">
+              Повторите про себя, запишите, расскажите другу:
+              вам только кажется, что вы владеете новой темой.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео на TED</h2>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" width="516" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+                  picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="516" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+                  picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">С детства Барбаре не давалась математика.
+              Она считала себя законченным гуманитарием, причём далеко не самым умным.
+              В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры.
+              Но для продвижения по службе нужно было сдавать математику.
+              И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся»,
+              ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </article>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a class="feynman__link" href="#">Подробнее →</a>
       </section>
 
       <section class="digits">
@@ -84,10 +163,22 @@
         </div>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__section-title">Метод Фейнмана</h2>
-        <p class="feynman__section-subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link" href="#">Подробнее →</a>
+      <section class="khan">
+        <div class="khan__container">
+          <h2 class="khan__author">Салман Кхан</h2>
+          <h3 class="khan__title">Весь мир — школа</h3>
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
+            по всему миру. Книгу «Весь мир — школа» нужно прочитать всем,
+            кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
+            которые приносят успех в школе, карьере и жизни.
+          </blockquote>
+          <p class="khan__quote-author">Джорж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Обложка книги «Весь мир — школа»">
+            <a class="khan__buy-link" href="#">Купить книгу →</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
@@ -124,21 +215,32 @@
               <h3 class="table__heading table__heading_theme_dark">7</h3>
               <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
             </div>
-            <div class="table_cell table__cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">8</h3>
               <p class="table__text table__text_theme_dark">Создайте быстрее петли обратной связи.</p>
             </div>
-            <div class="table_cell table__cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">9</h3>
               <p class="table__text table__text_theme_dark">Занимайтесь по расписанию,
                 короткими интенсивными интервалами.</p>
             </div>
-            <div class="table_cell table__cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">10</h3>
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </div>
           </div>
         <div class="kaufman__triangle"></div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфках обучения</p>
+        <div class="resources__logo-zone">
+          <img class="resources__logo" src="./images/resources-arzamas.svg" alt="Логотип Arzamas">
+          <img class="resources__logo" src="./images/resources-n1.svg" alt="Логотип Nplus1">
+          <img class="resources__logo" src="./images/resources-strelka.svg" alt="Логотип Strelka">
+          <img class="resources__logo" src="./images/resources-polka.svg" alt="Логотип Полка">
+        </div>
       </section>
     </main>
 
