--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       </section>
 
       <section class="kaufman">
-        <h2 class="section-title section-title_theme_dark">Приницпы обучения</h2>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
           <div class="table table_theme_dark">
             <div class="table__cell table__cell_theme_dark">
