--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
@@ -18,7 +17,9 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению
         вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать →</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Главное изображение">
-      <div class="header__square-pic"></div>
+      <div class="rotation rotation_place_header">
+        <div class="header__square-pic"></div>
+      </div>
     </header>
 
     <main class="content">
@@ -44,14 +45,14 @@
         <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <div class="cards">
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-attention.png" alt>
+            <img class="cards__image" src="./images/cards-attention.png" alt="Иллюстрация к пункту">
             <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают,
               если чередовать сфокусированное и рассеянное мышление.
             </p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png" alt>
+            <img class="cards__image" src="./images/cards-recall.png" alt="Иллюстрация к пункту">
             <h3 class="cards__title">Recall</h3>
             <p class="cards__description">
               Вспоминайте изученное — это позволит
@@ -59,7 +60,7 @@
             </p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png" alt>
+            <img class="cards__image" src="./images/cards-interliving.png" alt="Иллюстрация к пункту">
             <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">
               Изучайте несколько
@@ -68,7 +69,7 @@
             </p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png" alt>
+            <img class="cards__image" src="./images/cards-question.png" alt="Иллюстрация к пункту">
             <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">
               Слушая преподавателя, придумывайте хороший вопрос,
@@ -76,7 +77,7 @@
             </p>
           </div>
           <div class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png" alt>
+            <img class="cards__image" src="./images/cards-competence.png" alt="Иллюстрация к пункту">
             <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">
               Повторите про себя, запишите, расскажите другу:
@@ -90,10 +91,10 @@
         <h2 class="section-title">Видео на TED</h2>
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" width="516" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
                   picture-in-picture" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="516" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
                   picture-in-picture" allowfullscreen></iframe>
         </div>
@@ -165,8 +166,8 @@
 
       <section class="khan">
         <div class="khan__container">
-          <h2 class="khan__author">Салман Кхан</h2>
-          <h3 class="khan__title">Весь мир — школа</h3>
+          <p class="khan__author">Салман Кхан</p>
+          <h2 class="khan__title">Весь мир — школа</h2>
           <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов
             по всему миру. Книгу «Весь мир — школа» нужно прочитать всем,
             кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания,
@@ -205,8 +206,6 @@
               <h3 class="table__heading table__heading_theme_dark">5</h3>
               <p class="table__text table__text_theme_dark">Приготовьте все необходимо для занятий.</p>
             </div>
-          </div>
-          <div class="table table_theme_dark">
             <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">6</h3>
               <p class="table__text table__text_theme_dark">Устраните препятствие для занятий.</p>
@@ -229,17 +228,27 @@
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </div>
           </div>
-        <div class="kaufman__triangle"></div>
+        <div class="rotation rotation_place_kaufman">
+          <div class="kaufman__triangle"></div>
+        </div>
       </section>
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфках обучения</p>
         <div class="resources__logo-zone">
-          <img class="resources__logo" src="./images/resources-arzamas.svg" alt="Логотип Arzamas">
-          <img class="resources__logo" src="./images/resources-n1.svg" alt="Логотип Nplus1">
-          <img class="resources__logo" src="./images/resources-strelka.svg" alt="Логотип Strelka">
-          <img class="resources__logo" src="./images/resources-polka.svg" alt="Логотип Полка">
+          <a class="resources__link" href="https://arzamas.academy/">
+           <img class="resources__logo" src="./images/resources-arzamas.svg" alt="Логотип Arzamas">
+          </a>
+          <a class="resources__link" href="https://nplus1.ru/">
+            <img class="resources__logo" src="./images/resources-n1.svg" alt="Логотип Nplus1">
+          </a>
+          <a class="resources__link" href="https://strelka.com/">
+            <img class="resources__logo" src="./images/resources-strelka.svg" alt="Логотип Strelka">
+          </a>
+          <a class="resources__link" href="https://polka.academy/">
+            <img class="resources__logo" src="./images/resources-polka.svg" alt="Логотип Полка">
+          </a>
         </div>
       </section>
     </main>
