Все блоки вынесены на один уровень, исправлен микс анимации фигур, добавлен отступ блоку khan

--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению
         вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать →</a></p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Главное изображение">
-      <div class="rotation rotation_place_header">
-        <div class="header__square-pic"></div>
-      </div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -228,9 +226,7 @@
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </div>
           </div>
-        <div class="rotation rotation_place_kaufman">
-          <div class="kaufman__triangle"></div>
-        </div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
 
       <section class="resources">
